# Kitsune

./: .dockerignore  .env.example  .gitignore  BITACORA.md  Dockerfile  Makefile  README.md  TEMPLATE_GUIDE.md  docker-compose.yml  estructura.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3ab15e8c0b03_initial_migration.py
docs/: ARCHITECTURE.md  GUIDE.md  INDEX.md  PR_BODY.md  QUICKREF.md  SECURITY.md  agents.md  skills.md
docs/dev_notes/: implementation_plan.md  task.md  walkthrough.md
src/app/: __init__.py  api.py  core.py  database.py  logic.py  main.py  models.py  schemas.py
src/app/api/: deps.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: login.py  users.py
src/app/core/: config.py  exceptions.py  logging.py  security.py
src/app/db/: session.py
src/app/models/: user.py
src/app/repositories/: base.py  user_repository.py
src/app/schemas/: common.py  user.py
src/app/services/: user_service.py
tests/: conftest.py
tests/api/v1/: test_login.py
