[tool.poetry]
name = "kitsune"
version = "0.1.0"
description = "A professional, production-ready implementation of a FastAPI application."
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "3.2.2"
httpx = "^0.27.0"
structlog = "^24.1.0"
alembic = "^1.13.0"
asyncpg = "^0.31.0"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Longitud de línea (mismo estándar que Black)
line-length = 120
target-version = "py310"

# Excluir directorios comunes
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "alembic/versions"
]

[tool.ruff.lint]
# Seleccionar reglas:
# E: pycodestyle (errores)
# F: Pyflakes
# I: isort (ordenar imports)
# B: flake8-bugbear (errores comunes)
select = ["E", "F", "I", "B"]
ignore = ["B008"]

# Configuración de isort dentro de Ruff
[tool.ruff.lint.isort]
known-first-party = ["src"]
